# 3d-engine-course

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LEARNINGS.md  PROMPT.md  README.md  STATE.md  hello.cpp
docs/: conventions.html  cpp-style.html  index.html  math-toolbox.html
docs/_template/: README.md  apply-shared-css.py  apply-shared.py  check-page.js  lesson-template.html
docs/lessons/: 00-01-what-is-an-engine.html  00-02-how-this-course-works.html  00-03-toolchain.html  00-04-cmake-from-zero.html  00-05-first-window.html  00-06-headers-and-debugger.html  01-01-events-properly.html  01-02-input-state-vs-events.html  01-03-delta-time.html  01-04-fixed-timestep.html  01-05-framebuffer.html  01-06-colour.html  01-07-vectors-2d.html  01-08-pong.html  02-01-lines.html  02-02-triangle-edge-functions.html  02-03-barycentric.html  02-04-attribute-interpolation.html  02-05-matrices.html  02-06-mat4.html  02-07-homogeneous.html  02-08-space-chain.html  02-09-view-matrix.html  02-10-perspective.html  02-11-viewport.html  02-12-wireframe-mesh.html
memory/: 2026-07-16.md  2026-07-18.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  2026-07-25.md  2026-07-26.md  2026-07-27.md  2026-07-28.md  2026-07-29.md  2026-07-30.md  2026-07-31.md
src/: main.cpp
src/core/: clock.cpp  clock.hpp  fixed_step.cpp  fixed_step.hpp  input.cpp  input.hpp
src/game/: pong.cpp  pong.hpp
src/gfx/: colour.cpp  colour.hpp  framebuffer.cpp  framebuffer.hpp  mesh.hpp  raster.cpp  raster.hpp  viewport.hpp
src/math/: mat2.hpp  mat3.hpp  mat4.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
